<resources>
    <string name="app_name">BETCH</string>

    <string name="currency_symbol">(%1$s)</string>

    <string name="menu_alert_title">Alerts</string>
    <string name="menu_alert_send_feedback">Send feedback</string>

    <string name="alert_empty_title">Don\'t miss out!</string>
    <string name="alert_empty_message">Alerts will help you track your cryptocurrency prices, even when you are busy.</string>

    <string name="currency_empty_title">Hold tight!</string>
    <string name="currency_empty_message">Time is an illusion. Loading time doubly so.</string>

    <string name="create_alert_select_currency">Select currency</string>
    <string name="create_alert_select_trigger">Select trigger</string>
    <string name="str_price">Price</string>
    <string name="str_time">Time</string>
    <string name="str_create_alert_enter_price">Enter alert price</string>
    <string name="str_create_alert_price_hint">USD</string>
    <string name="str_create_alert_select_frequency">How frequently do you want to be notified?</string>
    <string name="str_save_alert">Save</string>
    <string name="str_new_alert">New alert</string>

    <string name="str_30_mins">30 mins</string>
    <string name="str_1_hr">1 hour</string>
    <string name="str_2_hr">2 hours</string>
    <string name="str_6_hr">6 hours</string>
    <string name="str_12_hours">12 hours</string>
    <string name="str_24_hours">24 hours</string>

    <string name="str_time_notification_title_onehour">Here\'s your 1 hr update&#8230; \n</string>
    <string name="str_time_notification_title">Here\'s your %1$d hrs update&#8230; \n</string>

    <string name="str_dashboard">Dashboard</string>
    <string name="str_alerts">Alerts</string>

    <string name="str_delete_alert">Delete alert</string>
    <string name="str_time_alert_message">Are you sure you want to delete %1$s time alert?</string>
    <string name="str_price_alert_message">Are you sure you want to delele %1$s price alert?</string>
    <string name="str_delete">Delete</string>
    <string name="str_cancel">Cancel</string>

    <string name="str_feedback">Feedback</string>
    <string name="str_feedback_email" translatable="false">chithalabs@gmail.com</string>

    <string name="str_enjoying_betch">Enjoying Betch?</string>
    <string name="str_how_about_rating">How about a rating on the playstore, then?</string>
    <string name="str_give_feedback">Would you mind giving us some feedback?</string>

    <string name="str_yes">Yes!</string>
    <string name="str_not_really">Not really</string>
    <string name="str_ok_sure">Ok, sure</string>
    <string name="str_no_thanks">No, thanks</string>

    <string name="str_no_network">Looks like you are not connected to the internet!</string>
    <string name="str_back_online">Hoorayy! You are back online.</string>
    <string name="str_no_network_please_try_later">No network connection. Please try later.</string>

    <string name="str_price_alert">Price alert</string>
    <string name="str_time_alert">Time alert</string>

    <string name="str_time_alert_title">Monitor %1$s every %2$s hour(s)</string>
    <string name="str_price_alert_title">1 %1$s %2$s USD %3$s</string>
    <string name="str_created_on">Created on %1$s</string>
</resources>
