<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/titlebarLayout"
        android:background="#FFF">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:text="@string/str_new_alert"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_clear"
            android:background="@drawable/ic_clear"
            android:padding="3dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:id="@+id/closeBottomSheetButton"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_save_alert"
            android:background="#FFFFFF"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:id="@+id/createAlertButton"
            android:enabled="false"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBBBB"
        android:layout_below="@+id/titlebarLayout"
        android:layout_marginBottom="5dp"
        android:id="@+id/separatorLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectCurrencyLayout"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@id/separatorLayout"
        android:layout_marginBottom="5dp"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_alert_select_currency"
            android:layout_weight="0.5"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/currencySpinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/selectCurrencyLayout"
        android:id="@+id/selectTriggerLayout"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_alert_select_trigger"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/triggerRadioGroup"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceRadioButton"
                    android:drawableStart="@drawable/ic_attach_money"
                    android:text="@string/str_price"
                    android:layout_weight="0.5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeRadioButton"
                    android:drawableStart="@drawable/ic_access_alarm"
                    android:text="@string/str_time"
                    android:layout_weight="0.5"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterPriceLayout"
        android:layout_below="@+id/selectTriggerLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1"
        android:visibility="invisible"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/str_create_alert_enter_price"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/str_create_alert_price_hint"
            android:id="@+id/priceEditText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectTimeLayout"
        android:layout_below="@id/selectTriggerLayout"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/str_create_alert_select_frequency"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="bottom"
            android:id="@+id/alertTimeSpinner" />
    </LinearLayout>
</RelativeLayout>